--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Build Binary using PyInstaller ManyLinux 2.24 Docker Action
-      uses: oleksis/pyinstaller-manylinux@v2.1.2
+    - name: Build Binary using Nutika ManyLinux 2.24 Docker Action
+      uses: jimkring/nutika-manylinux
       with:
-        pyinstaller-params: "['-c', '-F', '--name=app', 'tests/app.py']"
+        nutika-params: "['--module', 'tests/app.py']"
     - name: Upload Binary Distribution to Release
       uses: actions/upload-artifact@v2
       with:
