--- a/action.yml
+++ b/action.yml
@@ -1,14 +1,14 @@
-name: "PyInstaller ManyLinux 2.24 Docker Action"
-description: "Run Pyinstaller using ManyLinux 2.24 (x86_64) Debian 9 based"
+name: "Nutika ManyLinux 2.24 Docker Action"
+description: "Run Nuitka using ManyLinux 2.24 (x86_64) Debian 9 based"
 branding:
   icon: "box"
   color: "green"
 inputs:
-  pyinstaller-params:
-    description: "List of parameters for pyinstaller"
+  nuitka-params:
+    description: "List of parameters for nuitka"
     required: true
 runs:
   using: "docker"
   image: "Dockerfile"
   args:
-    - ${{ fromJSON(inputs.pyinstaller-params) }}
+    - ${{ fromJSON(inputs.nuitka-params) }}
