--- a/action.yml
+++ b/action.yml
@@ -10,6 +10,6 @@ inputs:
 runs:
   using: "docker"
   # image: "Dockerfile"
-  image: ghcr.io/jimkring/nuitka-manylinux:latest
+  image: docker://ghcr.io/jimkring/nuitka-manylinux:latest
   args:
     - ${{ fromJSON(inputs.nuitka-params) }}
