--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -9,6 +9,10 @@ on:
   push:
     branches:
       - master
+    paths:
+      - Dockerfile
+      - entrypoint.sh
+      - .dockerignore
 
 jobs:
   docker_publish:
