--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,14 +14,14 @@ jobs:
     - name: Build Binary using Nuitka ManyLinux 2.24 Docker Action
       uses: jimkring/nuitka-manylinux@master
       with:
-        nuitka-params: "['--module', 'tests/app.py']"
+        nuitka-params: "['--output-dir=build', '--module', 'tests/app.py']"
     - name: Upload Binary Distribution to Release
       uses: actions/upload-artifact@v2
       with:
         name: app
-        path: ./dist/app
+        path: ./build/app
         if-no-files-found: error
     - name: Run app binary and check output
       run: |
-        chmod +x ./dist/app
+        chmod +x ./build/app
         [[ $(./dist/app) == "Hello out there 👋!" ]]
